# dso

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Doxyfile.in  README.md  TODO.md  main.cpp
benchmark/: CMakeLists.txt  banchmarkPixelSelector.cpp
cmake/: Doxygen.cmake  FindCatch.cmake  InsturctionSet.cmake
docs/: 2019-8-07.md  Doxyfile.in
scripts/: run.sh.in
spikes/: CMakeLists.txt  spikesAddActiveFrame.cpp  spikesPixelSelector.cpp  spikesPixelSelector2.cpp
src/: main.cpp  main_dso_pangolin.cpp
src/FrontEnd/: FullSystemFrontEnd.cpp
src/FullSystem/: CoarseInitializer.cpp  CoarseInitializer.h  FullSystem.cpp  FullSystem.h  FullSystemMarginalize.cpp  HessianBlocks.h  PixelSelector2.cpp  PixelSelector2.h
src/IOWrapper/: ImageDisplay.h  Output3DWrapper.h
src/IOWrapper/OpenCV/: ImageRW_OpenCV.cpp
src/util/: DatasetReader.cpp  DatasetReader.h  IndexThreadReduce.h  Undistort.cpp  Undistort.hpp  Undistort2.cpp  Undistort2.hpp
src/util/tests/: CMakeLists.txt  testDatasetReader.cpp  testUndistort.cpp  testUndistort2.cpp  testUtils.hpp  tests-main.cpp
